// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index distributeByRuntime when less than 90% of runtime stats are available distributes test files between buckets based on file size 1`] = `
Array [
  Object {
    "files": Array [
      "9",
      "2",
      "1",
    ],
    "runtime": 300,
    "size": 12,
  },
  Object {
    "files": Array [
      "8",
      "3",
    ],
    "runtime": 1100,
    "size": 11,
  },
  Object {
    "files": Array [
      "7",
      "4",
    ],
    "runtime": 1100,
    "size": 11,
  },
  Object {
    "files": Array [
      "6",
      "5",
    ],
    "runtime": 1100,
    "size": 11,
  },
]
`;

exports[`index distributeByRuntime when more than 90% of runtime stats are available distributes test based on runtime 1`] = `
Array [
  Object {
    "files": Array [
      "9",
      "2",
      "1",
    ],
    "runtime": 1200,
    "size": 12,
  },
  Object {
    "files": Array [
      "8",
      "3",
      "10",
    ],
    "runtime": 1100,
    "size": 21,
  },
  Object {
    "files": Array [
      "7",
      "4",
    ],
    "runtime": 1100,
    "size": 11,
  },
  Object {
    "files": Array [
      "6",
      "5",
    ],
    "runtime": 1100,
    "size": 11,
  },
]
`;
